# student-grade-tracker

./: .gitignore  CMakeLists.txt  README.md
include/: calculation.h  input.h  storage.h
src/: calculation.cpp  input.cpp  main.cpp  storage.cpp
tests/: test_calculation.cpp
